# grant_doctor_map

./: .gitignore  README.md  pyproject.toml
grant_doctor_map/: autoencoder.py  data_iterator.py  layer.py  loss.py  mlp.py  pr.py  thesaurus_flask.py  train_nn.py
grant_doctor_map/database_functions/: grant_db_to_csv.py  grant_doc_db.py  grant_doc_db_creation.py  table_creation_queries.sql
grant_doctor_map/db_files/: create_tables.sql
grant_doctor_map/grants/: grants_reader.py
grant_doctor_map/mapping/: classifier.py  create_training_data.py  db.py  entity_resolution.py  entity_resolution_model.py  map.py  model_features.py  string_distance_features.py
grant_doctor_map/mini_project/: create_small_csvs.py
grant_doctor_map/neural_nets/: autoencoder.py
grant_doctor_map/nn_files/: read_wine_data.py  tensor.py
grant_doctor_map/npi/: npi_reader.py
grant_doctor_map/readers/: grants.py  npi.py
models/: 240423_entity_resolution_model.json  240423_entity_resolution_model_metadata.json  240424_entity_resolution_model.json  240424_entity_resolution_model_metadata.json
scripts/: add_data_to_db.py  test_classifier.py  train_classifier.py  train_xgb_model.py
