[tool.poetry]
name = "grant-doctor-map"
version = "0.1.0"
description = ""
authors = ["shearere2 <shearere2@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jarowinkler = "^2.0.1"
fasttext = {git = "https://github.com/cfculhane/fastText"}
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
